# npc

./: .env.example  Cargo.toml  README.md  tmp.ts
.github/ISSUE_TEMPLATE/: BUG-FORM.yml  FEATURE-FORM.yml
.github/workflows/: test.yml
src/: cli.rs  file_reader.rs  gpt.rs  main.rs
