[package]
name = "npc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
console = "0.14"
reqwest = { version = "0.11", features = ["json"] }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
figlet-rs = "0.1.5"

[dependencies.async-std]
version = "1.9"
features = ["attributes"]